Opened 10 years ago

Closed 10 years ago

Last modified 10 years ago

#11367 closed bug (fixed)

[keystore_server] text doesn't fit

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: Servers/keystore_server Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev48086

Application Keyring Access window cuts off text at the bottom if app path is long.

Attachments (1)

keystore_server.png (14.1 KB ) - added by diver 10 years ago.

Download all attachments as: .zip

Change History (4)

by diver, 10 years ago

Attachment: keystore_server.png added

comment:1 by diver, 10 years ago

Owner: changed from mmlr to axeld
Status: newassigned

Probably fixed in hrev49481.

comment:2 by diver, 10 years ago

Resolution: fixed
Status: assignedclosed

comment:3 by mmlr, 10 years ago

Actually fixed in hrev49594, the window in question is no BAlert.

Note: See TracTickets for help on using tickets.